fixed tile alignment

--- a/style.css
+++ b/style.css
@@ -41,13 +41,6 @@
 }
 
 .overlay {
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    overflow: auto;
-    top: 0px;
-    left: 0px;
     background: rgba(0, 0, 0, 0.6); /*can be anything, of course*/
 }
 
